add tika environment file and update settings in openwebui.env

--- a/env/openwebui.example
+++ b/env/openwebui.example
@@ -11,12 +11,13 @@ CONTENT_EXTRACTION_ENGINE=docling
 DATABASE_URL="postgresql://postgres:postgres@db:5432/openwebui"
 DOCLING_SERVER_URL=http://docling:5001
 ENABLE_EVALUATION_ARENA_MODELS=false
-#ENABLE_IMAGE_GENERATION=true
+ENABLE_IMAGE_GENERATION=false
 ENABLE_OLLAMA_API=true
 ENABLE_OPENAI_API=false
 ENABLE_RAG_WEB_SEARCH=true
 ENABLE_WEB_SEARCH=true
 ENV=dev
+GLOBAL_LOG_LEVEL=info
 #IMAGE_GENERATION_ENGINE=comfyui
 #IMAGE_GENERATION_MODEL=FLUX.1-schnell
 #IMAGE_SIZE=512x512
@@ -28,9 +29,10 @@ RAG_EMBEDDING_MODEL=nomic-embed-text:latest
 RAG_OLLAMA_BASE_URL=http://ollama:11434
 RAG_TEXT_SPLITTER=token
 RAG_WEB_SEARCH_ENGINE=searxng
-RAG_WEB_SEARCH_RESULT_COUNT=3
+RAG_WEB_SEARCH_RESULT_COUNT=6
 RAG_WEB_SEARCH_CONCURRENT_REQUESTS=10
 SEARXNG_QUERY_URL=http://searxng:8080/search?q=<query>
+TIKA_SERVER_URL=http://tika:9998
 USE_CUDA_DOCKER=true
 VECTOR_DB=pgvector
 WEB_SEARCH_ENGINE=searxng
