Add examples for service usage
- create service example directories
- remove kokoro examples and service
- uncomment service ports in compose.yml.example for services related to
  examples
- update README with example documentation
- remove migrator directory and instructions from the README, refer to
  other github project from Taylor Wilsdon.

--- a/compose.yml.example
+++ b/compose.yml.example
@@ -61,8 +61,8 @@ services:
       test: curl --fail http://localhost:5001/health || exit 1
       timeout: 5s
     image: quay.io/docling-project/docling-serve:latest
-#    ports:
-#      - 5001:5001
+    ports:
+      - 5001:5001
     restart: unless-stopped
 
   edgetts:
@@ -83,8 +83,8 @@ services:
       test: "curl --fail http://localhost:5050/voices -H 'Authorization: Bearer your_api_key_here' || exit 1"
       timeout: 5s
     image: travisvn/openai-edge-tts:latest
-#    ports:
-#      - 5050:5050
+    ports:
+      - 5050:5050
     restart: unless-stopped
 
   nginx:
