--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
 compose.yml
 
-certbot/conf
-certbot/web
+conf/**/*.conf
+conf/**/*.ini
+conf/**/*.json
+conf/**/*.yml
+
+conf/comfyui/runner-scripts/download-models.txt
+
 
 data/comfyui
-
-conf/cloudflare/config.yml
-conf/comfyui/runner-scripts/download-models.txt
-conf/nginx/nginx.conf
-conf/nginx/conf.d/default.conf
-conf/searxng/settings.yml
-conf/searxng/uwsgi.ini
-
-
 data/nginx
 data/ollama
 data/openwebui
