--- a/env/openwebui.example
+++ b/env/openwebui.example
@@ -5,8 +5,6 @@ AUDIO_TTS_MODEL=tts-1-hd
 AUDIO_TTS_OPENAI_API_BASE_URL=http://edgetts:5050/v1
 AUDIO_TTS_OPENAI_API_KEY=your_api_key_here
 AUDIO_TTS_VOICE=en-US-EmmaMultilingualNeural
-#COMFYUI_API_KEY=
-#COMFYUI_BASE_URL=http://comfyui:8188
 CONTENT_EXTRACTION_ENGINE=docling
 DATABASE_URL="postgresql://postgres:postgres@db:5432/openwebui"
 DOCLING_SERVER_URL=http://docling:5001
@@ -33,6 +31,7 @@ RAG_WEB_SEARCH_RESULT_COUNT=6
 RAG_WEB_SEARCH_CONCURRENT_REQUESTS=10
 SEARXNG_QUERY_URL=http://searxng:8080/search?q=<query>
 TIKA_SERVER_URL=http://tika:9998
+TOOL_SERVER_CONNECTIONS=["http://mcposerver:8000/time", "http://mcposerver:8000/postgres"]
 USE_CUDA_DOCKER=true
 VECTOR_DB=pgvector
 WEB_SEARCH_ENGINE=searxng
