--- a/env/searxng.example
+++ b/env/searxng.example
@@ -1,4 +1,3 @@
-#SEARXNG_HOST=localhost:8080/
 SEARXNG_REDIS_URL=redis://redis:6379/1
-SEARXNG_SECRET=YOUR-SECRET-KEY
-#SEARXNG_BASE_URL=https://<domain-name>/searxng
+SEARXNG_SECRET=CHANGE_BEFORE_GOING_LIVE
+SEARXNG_BASE_URL=https://localhost:4000/searxng
