--- a/env/openwebui.example
+++ b/env/openwebui.example
@@ -6,7 +6,7 @@ AUDIO_TTS_OPENAI_API_BASE_URL=http://edgetts:5050/v1
 AUDIO_TTS_OPENAI_API_KEY=your_api_key_here
 AUDIO_TTS_VOICE=en-US-EmmaMultilingualNeural
 CONTENT_EXTRACTION_ENGINE=docling
-DATABASE_URL="postgresql://postgres:postgres@db:5432/openwebui"
+DATABASE_URL=${DATABASE_URL}
 DOCLING_SERVER_URL=http://docling:5001
 ENABLE_EVALUATION_ARENA_MODELS=false
 ENABLE_IMAGE_GENERATION=false
@@ -18,9 +18,9 @@ ENV=dev
 GLOBAL_LOG_LEVEL=info
 OLLAMA_BASE_URLS=http://ollama:11434
 PDF_EXTRACT_IMAGES=true
-PGVECTOR_DB_URL=postgresql://postgres:postgres@db:5432/openwebui
+PGVECTOR_DB_URL=${PGVECTOR_DB_URL}
 RAG_EMBEDDING_ENGINE=ollama
-RAG_EMBEDDING_MODEL=nomic-embed-text:latest
+RAG_EMBEDDING_MODEL=${RAG_EMBEDDING_MODEL}
 RAG_OLLAMA_BASE_URL=http://ollama:11434
 RAG_TEXT_SPLITTER=token
 RAG_WEB_SEARCH_ENGINE=searxng
@@ -28,9 +28,9 @@ RAG_WEB_SEARCH_RESULT_COUNT=6
 RAG_WEB_SEARCH_CONCURRENT_REQUESTS=10
 SEARXNG_QUERY_URL=http://searxng:8080/search?q=<query>
 TIKA_SERVER_URL=http://tika:9998
-TOOL_SERVER_CONNECTIONS=["http://mcposerver:8000/time", "http://mcposerver:8000/postgres"]
+#TOOL_SERVER_CONNECTIONS=["http://mcp:8000/time", "http://mcp:8000/postgres"]
 USE_CUDA_DOCKER=true
 VECTOR_DB=pgvector
 WEB_SEARCH_ENGINE=searxng
-WEBUI_SECRET_KEY=CHANGE_BEFORE_GOING_LIVE
-WEBUI_URL=https://localhost:4000
+WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
+WEBUI_URL=${WEBUI_URL}
