--- a/conf/mcp/config.example
+++ b/conf/mcp/config.example
@@ -2,14 +2,14 @@
   "mcpServers": {
     "time": {
       "command": "uvx",
-      "args": ["mcp-server-time", "--local-timezone=America/Chicago"]
+      "args": ["mcp-server-time", "--local-timezone=${TIMEZONE}"]
     },
     "postgres": {
       "command": "npx",
       "args": [
         "-y",
         "@modelcontextprotocol/server-postgres",
-        "postgresql://postgres:postgres@db/openwebui"
+        "${DATABASE_URL}"
       ]
     }
   }
