--- a/conf/nginx/templates/default.conf.example
+++ b/conf/nginx/templates/default.conf.example
@@ -13,11 +13,6 @@ upstream edgettsUpstream {
   keepalive 512;
 }
 
-upstream ollamaUpstream {
-  server ollama:11434 max_fails=0 fail_timeout=10s;
-  keepalive 512;
-}
-
 upstream redisUpstream {
   server redis:8001 max_fails=0 fail_timeout=10s;
   keepalive 512;
@@ -45,7 +40,7 @@ server {
 
   absolute_redirect off;
 
-  location ~ ^/(docs|docling|edgetts|ollama|redis|searxng|tika)(.*)? {
+  location ~ ^/(docs|docling|edgetts|redis|searxng|tika)(.*)? {
     auth_request /auth-server/validate;
     auth_request_set $auth_status $upstream_status;
 
