--- a/env/nginx.example
+++ b/env/nginx.example
@@ -1,4 +1,4 @@
 NGINX_ENVSUBST_TEMPLATE_DIR: /etc/nginx/templates
 NGINX_ENVSUBST_TEMPLATE_SUFFIX: .example
 NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/conf.d
-NGINX_HOST: localhost
+NGINX_HOST: ${NGINX_HOST}
