--- a/env/searxng.example
+++ b/env/searxng.example
@@ -1,3 +1,3 @@
 SEARXNG_REDIS_URL=redis://redis:6379/1
-SEARXNG_SECRET=CHANGE_BEFORE_GOING_LIVE
-SEARXNG_BASE_URL=https://localhost:4000/searxng
+SEARXNG_SECRET=${SEARXNG_SECRET}
+SEARXNG_BASE_URL=${SEARXNG_BASE_URL}
