feat: integrate Backrest backup solution with local .config-backup storage
- Add Backrest service to Docker Compose with health checks
- Configure local backup repository in .config-backup/ directory
- Create automated setup scripts for repository and backup plan configuration
- Implement backup management and monitoring scripts
- Add comprehensive documentation for setup and disaster recovery procedures
- Configure retention policy: 7 daily + 4 weekly backups
- Include critical data paths: env/, conf/, data/postgres/, data/openwebui/, data/ollama/
- Generate secure encryption keys and authentication credentials
- Add backup integrity checking and status monitoring capabilities
- Create quick setup guide and restore procedures documentation

Scripts added:
- backrest-setup.sh: automated Backrest installation and configuration
- backrest-management.sh: backup operations and monitoring
- check-local-backup.sh: backup verification and integrity checks
- complete-backup-setup.sh: full automation with web UI instructions
- setup-local-backup.sh: local repository configuration helper

Documentation added:
- backrest-quick-setup-guide.md: step-by-step setup instructions
- local-backup-restore-guide.md: comprehensive recovery procedures
- backrest-integration-roadmap.md: implementation phases and timeline
- backrest-integration-testing-plan.md: validation and testing strategy

Configuration:
- Backup schedule: daily at 2:00 AM
- Retention: 7 days daily, 4 weeks weekly
- Encryption: restic with generated secure keys
- Web UI: accessible at localhost:9898 with admin authentication

--- a/compose.yml.example
+++ b/compose.yml.example
@@ -229,3 +229,29 @@ services:
     restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  backrest:
+    depends_on:
+      - db
+      - redis
+      - watchtower
+    env_file: env/backrest.env
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:9898/health || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
+    image: garethgeorge/backrest:latest
+    ports:
+      - "9898:9898"
+    restart: unless-stopped
+    volumes:
+      - ./data/backrest:/data
+      - ./conf/backrest:/config
+      - ./cache/backrest:/cache
+      - ./tmp/backrest:/tmp
+      - ./data:/backup-sources/data:ro
+      - ./conf:/backup-sources/conf:ro
+      - ./env:/backup-sources/env:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
