--- a/conf/searxng/limiter.toml
+++ b/conf/searxng/limiter.toml
@@ -1,23 +1,19 @@
 # SearXNG Rate Limiter Configuration
 # Конфигурация ограничения скорости для SearXNG
 
-[botdetection]
-# Включить защиту от ботов
-enabled = true
-
+# Базовая конфигурация rate limiting
+[botdetection.ip_limit]
 # Максимальное количество запросов в минуту для IP
-max_requests_per_minute = 60
+filter_link_local = false
+link_token = false
 
-# Максимальное количество запросов в час для IP  
-max_requests_per_hour = 600
-
-# Время блокировки в секундах при превышении лимитов
-block_time = 300
+[botdetection.ip_lists]
+# Списки IP адресов
+pass_searxng_org = true
 
 [real_ip]
 # Доверенные прокси для получения реального IP
 x_for = 1
 
-[link_token]
-# Включить токены для ссылок
-enabled = false
+# Простая конфигурация без сложных правил
+# Основные ограничения будут обрабатываться Nginx
