--- a/env/postgres.example
+++ b/env/postgres.example
@@ -1,3 +1,5 @@
 POSTGRES_DB=${POSTGRES_DB}
 POSTGRES_USER=${POSTGRES_USER}
 POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+# Dev
+POSTGRES_HOST_AUTH_METHOD=trust
