--- a/env/docling.example
+++ b/env/docling.example
@@ -1,1 +1,4 @@
 DOCLING_SERVE_ENABLE_UI=true
+DOCLING_SERVE_ALLOW_EXTERNAL_PLUGINS=true
+DOCLING_SERVE_ENABLE_REMOTE_SERVICES=true
+DOCLING_SERVE_MAX_SYNC_WAIT=900
