--- a/env/searxng.example
+++ b/env/searxng.example
@@ -1,3 +1,10 @@
 SEARXNG_REDIS_URL=redis://redis:6379/1
 SEARXNG_SECRET=${SEARXNG_SECRET}
 SEARXNG_BASE_URL=${SEARXNG_BASE_URL}
+SEARXNG_IMAGE_PROXY=true
+SEARXNG_STATIC_USE_HASH=true
+SEARXNG_UWSGI_WORKERS=4
+SEARXNG_UWSGI_THREADS=4
+SEARXNG_REQUEST_TIMEOUT=6.0
+SEARXNG_PORT=8080
+SEARXNG_BIND_ADDRESS=0.0.0.0
