--- a/env/edgetts.example
+++ b/env/edgetts.example
@@ -1,3 +1,8 @@
 DEFAULT_VOICE=en-US-EmmaMultilingualNeural
 DEFAULT_RESPONSE_FORMAT=mp3
 DEFAULT_SPEED=1.0
+DEFAULT_LANGUAGE=en-US
+REMOVE_FILTER=False
+EXPAND_API=True
+API_KEY=<openai-type key>
+DETAILED_ERROR_LOGGING=True
