--- a/env/openwebui.example
+++ b/env/openwebui.example
@@ -7,6 +7,7 @@ AUDIO_TTS_OPENAI_API_KEY=your_api_key_here
 AUDIO_TTS_VOICE=en-US-EmmaMultilingualNeural
 CONTENT_EXTRACTION_ENGINE=tika
 DATABASE_URL=${DATABASE_URL}
+DO_NOT_TRACK=true
 DOCLING_SERVER_URL=http://docling:5001
 ENABLE_EVALUATION_ARENA_MODELS=false
 ENABLE_IMAGE_GENERATION=false
@@ -14,6 +15,7 @@ ENABLE_OLLAMA_API=true
 ENABLE_OPENAI_API=false
 ENABLE_RAG_WEB_SEARCH=true
 ENABLE_WEB_SEARCH=true
+ENABLE_WEBSOCKET_SUPPORT=true
 ENV=dev
 GLOBAL_LOG_LEVEL=info
 OLLAMA_BASE_URLS=http://ollama:11434
@@ -21,16 +23,24 @@ PDF_EXTRACT_IMAGES=true
 PGVECTOR_DB_URL=${PGVECTOR_DB_URL}
 RAG_EMBEDDING_ENGINE=ollama
 RAG_EMBEDDING_MODEL=${RAG_EMBEDDING_MODEL}
+RAG_EMBEDDING_MODEL_TRUST_REMOTE_CODE="True"
 RAG_OLLAMA_BASE_URL=http://ollama:11434
 RAG_TEXT_SPLITTER=token
 RAG_WEB_SEARCH_ENGINE=searxng
 RAG_WEB_SEARCH_RESULT_COUNT=6
 RAG_WEB_SEARCH_CONCURRENT_REQUESTS=10
+REDIS_KEY_PREFIX=open-webui
+REDIS_URL=redis://redis:6379/0
 SEARXNG_QUERY_URL=http://searxng:8080/search?q=<query>
+SCARF_NO_ANALYTICS=true
 TIKA_SERVER_URL=http://tika:9998
-#TOOL_SERVER_CONNECTIONS=["http://mcp:8000/time", "http://mcp:8000/postgres"]
+USER_AGENT="Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36"
+TOOL_SERVER_CONNECTIONS=[{"name":"time","url":"http://mcposerver:8000","path":"/time","auth_type":"none","key":"","config":{}},{"name":"postgres","url":"http://mcposerver:8000","path":"/postgres","auth_type":"none","key":"","config":{}}]
 USE_CUDA_DOCKER=true
 VECTOR_DB=pgvector
+WEBSOCKET_MANAGER=redis
+WEBSOCKET_REDIS_URL=redis://redis:6379/1
 WEB_SEARCH_ENGINE=searxng
 WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
 WEBUI_URL=${WEBUI_URL}
+WHISPER_MODEL_AUTO_UPDATE=true
