--- a/compose.example
+++ b/compose.example
@@ -180,6 +180,6 @@ volumes:
   ollama:
     external: false
   openwebui:
-    external: false
+    external: true
   postgres:
     external: false
