Reverted RAG_EMBEDDING_MODEL_TRUST_REMOTE_CODE to FALSE

--- a/env/openwebui.example
+++ b/env/openwebui.example
@@ -23,7 +23,7 @@ RAG_EMBEDDING_ENGINE=ollama
 RAG_EMBEDDING_MODEL=${RAG_EMBEDDING_MODEL}
 RAG_OLLAMA_BASE_URL=http://ollama:11434
 RAG_TEXT_SPLITTER=token
-RAG_EMBEDDING_MODEL_TRUST_REMOTE_CODE="True"
+RAG_EMBEDDING_MODEL_TRUST_REMOTE_CODE="False"
 RAG_WEB_SEARCH_ENGINE=searxng
 RAG_WEB_SEARCH_RESULT_COUNT=6
 RAG_WEB_SEARCH_CONCURRENT_REQUESTS=10
