Updated volume mount for customocr
you were correct, based on my research, this needed to be mapped at / so that the entry point command can use it as classpath

--- a/compose.example
+++ b/compose.example
@@ -170,6 +170,7 @@ services:
     image: apache/tika:latest-full
     volumes:
       - ./conf/tika/customocr/tika-config-rendered.xml:/tika-config.xml
+      - ./conf/tika/customocr:/customocr
     restart: unless-stopped
 
   watchtower:
