--- a/compose.example
+++ b/compose.example
@@ -167,7 +167,7 @@ services:
       start_period: 5s
       test: curl --fail http://localhost:9998/tika || exit 1
       timeout: 5s
-    image: apache/tika:latest-full
+    image: apache/tika:${TAG:-3.2.0.0}-full
     volumes:
       - ./conf/tika/customocr/tika-config-rendered.xml:/tika-config.xml
       - ./conf/tika/customocr:/customocr
