--- a/conf/searxng/limiter.toml
+++ b/conf/searxng/limiter.toml
@@ -1,19 +1,21 @@
 # SearXNG Rate Limiter Configuration
-# Конфигурация ограничения скорости для SearXNG
+# Минимальная конфигурация для интеграции с OpenWebUI
 
-# Базовая конфигурация rate limiting
 [botdetection.ip_limit]
-# Максимальное количество запросов в минуту для IP
+# Отключить все ограничения для внутренних запросов
 filter_link_local = false
 link_token = false
 
 [botdetection.ip_lists]
-# Списки IP адресов
+# Разрешить все запросы от внутренних сетей
 pass_searxng_org = true
+pass_ip = [
+    "127.0.0.0/8",
+    "10.0.0.0/8",
+    "172.16.0.0/12",
+    "192.168.0.0/16"
+]
 
 [real_ip]
-# Доверенные прокси для получения реального IP
+# Настройки для получения реального IP через прокси
 x_for = 1
-
-# Простая конфигурация без сложных правил
-# Основные ограничения будут обрабатываться Nginx
