fix(security): исправление прав доступа Backrest для Snyk сканирования
🔧 ИСПРАВЛЕНИЯ:
- Изменен владелец cache/backrest/restic/621d287ab1* с root на konstantin
- Установлены корректные права доступа: 755 для директорий, 644 для файлов
- Добавлена cache/ директория в .gitignore для исключения кэша из версионного контроля

🎯 РЕЗУЛЬТАТ:
- Устранена ошибка EACCES: permission denied для Snyk сканера
- Backrest сервис остается в статусе healthy (5 снапшотов)
- Соблюдены принципы безопасности (755/644 права доступа)
- Кэш-директории исключены из Git

Fixes: Snyk IaC сканирование блокировалось правами root (700) на директории restic

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ docker-data/
 .eslintcache
 .vitest/
 .cache/
+cache/
 
 # ===================================================================
 # IDE И РЕДАКТОРЫ
